--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -75,12 +75,18 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-button-brand-border: transparent;
-  --vp-button-brand-text: var(--vp-c-white);
-  --vp-button-brand-bg: var(--vp-c-brand-3);
-  --vp-button-brand-hover-border: transparent;
-  --vp-button-brand-hover-text: var(--vp-c-white);
-  --vp-button-brand-hover-bg: var(--vp-c-brand-2);
+  --vp-button-brand-border: #51CEBC;
+  /* --vp-button-brand-border: transparent; */
+  --vp-button-brand-text: #063442;
+  /* --vp-button-brand-text: var(--vp-c-white); */
+  --vp-button-brand-bg: #51CEBC;
+  /* --vp-button-brand-bg: var(--vp-c-brand-3); */
+  --vp-button-brand-hover-border: #51CEBC;
+  /* --vp-button-brand-hover-border: transparent; */
+  --vp-button-brand-hover-text: #51CEBC;
+  /* --vp-button-brand-hover-text: var(--vp-c-white); */
+  --vp-button-brand-hover-bg: transparent;
+  /* --vp-button-brand-hover-bg: var(--vp-c-brand-2); */
   --vp-button-brand-active-border: transparent;
   --vp-button-brand-active-text: var(--vp-c-white);
   --vp-button-brand-active-bg: var(--vp-c-brand-1);
@@ -94,8 +100,8 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #bd34fe 30%,
-    #41d1ff
+    #51CEBC 10%,
+    #51CEBC 
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
@@ -136,4 +142,3 @@
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
-
