--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -104,15 +104,15 @@
     #51CEBC 
   );
 
-  --vp-home-hero-image-background-image: linear-gradient(
+  /* --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #bd34fe 50%,
     #47caff 50%
   );
-  --vp-home-hero-image-filter: blur(44px);
+  --vp-home-hero-image-filter: blur(44px); */
 }
 
-@media (min-width: 640px) {
+/* @media (min-width: 640px) {
   :root {
     --vp-home-hero-image-filter: blur(56px);
   }
@@ -122,7 +122,7 @@
   :root {
     --vp-home-hero-image-filter: blur(68px);
   }
-}
+} */
 
 /**
  * Component: Custom Block
