--- a/docs-pages/docs-elements/elements.css
+++ b/docs-pages/docs-elements/elements.css
@@ -1,42 +1,24 @@
 
 /* Standard button */
 .standard-button {
-    appearance: none;
     background-color: #FAFBFC;
     border: 1px solid rgba(27, 31, 35, 0.15);
     border-radius: 6px;
     box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
-    box-sizing: border-box;
     color: #24292E;
     cursor: pointer;
-    display: inline-block;
-    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    list-style: none;
     padding: 6px 16px;
-    position: relative;
     transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    vertical-align: middle;
     white-space: nowrap;
     word-wrap: break-word;
   }
   
   .standard-button:hover {
     background-color: #F3F4F6;
-    text-decoration: none;
     transition-duration: 0.1s;
-  }
-  
-  .standard-button:disabled {
-    background-color: #FAFBFC;
-    border-color: rgba(27, 31, 35, 0.15);
-    color: #959DA5;
-    cursor: default;
   }
   
   .standard-button:active {
@@ -44,16 +26,44 @@
     box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
     transition: none 0s;
   }
-  
-  .standard-button:focus {
-    outline: 1px transparent;
-  }
-  
-  .standard-button:before {
-    display: none;
-  }
-  
-  .standard-button:-webkit-details-marker {
-    display: none;
-  }
   /* Standard button end */
+
+  /* Standard popup */
+  .modal {
+    padding: 1rem 0;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: #00000047; 
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #ffffff;
+    margin: auto;
+    padding: 20px;
+    width: 40rem;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal-text {
+    display: flex;
+    justify-content: center;
+  }
+  /* Standard popup ends */
